--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -1,5 +1,8 @@
 <resources>
   <!-- Base application theme. -->
+  <style name="Widget.AppCompat.TextView" parent="android:Widget">
+        @null
+  </style>
   <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
     <!-- Customize your theme here. -->
     <item name="android:textColor">#000000</item>
